# nejicast

./: .gitignore  CMakeLists.txt  README.md
include/: nejicast.hpp  scheduler.hpp
include/common/: config.hpp  elf.hpp  file.hpp  types.hpp
include/hw/cpu/: bsc.hpp  ccn.hpp  cpg.hpp  cpu.hpp  dmac.hpp  intc.hpp  ocio.hpp  prfc.hpp  rtc.hpp  scif.hpp  tmu.hpp  ubc.hpp
include/hw/g1/: g1.hpp  gdrom.hpp
include/hw/g2/: aica.hpp  g2.hpp  modem.hpp  rtc.hpp
include/hw/holly/: bus.hpp  holly.hpp  intc.hpp  maple.hpp
include/hw/maple/: controller.hpp  device.hpp  maple.hpp
include/hw/pvr/: core.hpp  interface.hpp  pvr.hpp  spg.hpp  ta.hpp
src/: nejicast.cpp  scheduler.cpp
src/common/: elf.cpp  file.cpp
src/hw/cpu/: bsc.cpp  ccn.cpp  cpg.cpp  cpu.cpp  dmac.cpp  intc.cpp  ocio.cpp  prfc.cpp  rtc.cpp  scif.cpp  tmu.cpp  ubc.cpp
src/hw/g1/: g1.cpp  gdrom.cpp
src/hw/g2/: aica.cpp  g2.cpp  modem.cpp  rtc.cpp
src/hw/holly/: bus.cpp  holly.cpp  intc.cpp  maple.cpp
src/hw/maple/: maple.cpp
src/hw/pvr/: core.cpp  interface.cpp  pvr.cpp  spg.cpp  ta.cpp
